--- a/static/note/style.css
+++ b/static/note/style.css
@@ -1,7 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
-h2 {
+h2,h3{
 	font-family: 'Abril Fatface', cursive;
+	text-transform:capitalize;
+}
+
+h4 {
+	text-transform:capitalize;
+}
+
+
+.sidebar {
+	width: 200px;
+	position: fixed;
+	top: 2%;
+	left: 16%;
+	z-index: 999;
+	transition: all 0.3s;
+	margin: 10px;
+	padding: 20px;
 }
 
 textarea{
